<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayout"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp">

    <RelativeLayout
        android:id="@+id/lin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_6"
        android:layout_height="@dimen/dp_200"
        android:background="@color/white"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_8"
                android:weightSum="3">
                <RelativeLayout
                    android:id="@+id/wdrz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/menu_b_log"
                        android:text="@string/wdrz"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/wtsb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/menu_b_wtsb"
                        android:text="@string/wtsb"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/sbjl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/menu_b_sbjl"
                        android:text="@string/sbjl"/>
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_8"
                android:weightSum="3">
                <RelativeLayout
                    android:id="@+id/fpzc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/main2_zcjd"
                        android:text="政策解读"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/jyjl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="visible">

                    <TextView
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/main1_jyjl"
                        android:text="经验交流"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <TextView
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/menu_b_sbjl"
                        android:text="@string/sbjl"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>